# sparkth

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.local  LICENSE  Makefile  PLUGIN_MIGRATIONS.md  PLUGIN_SYSTEM.md  RAM_Usage_Report.md  README.md  alembic.ini  alembic_analytics.ini  cli.py  config.json  conftest.py  dist-workspace.toml  docker-compose.dev.yml  docker-compose.yml  lefthook.yml  mkdocs.yml  pyproject.toml
.claude/agents/: git-commit-push-pr.md  merge-conflict-resolver.md
.claude/docs/: architectural_patterns.md
.claude/skills/: caveman-mode.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-test.yml  ci.yml  claude-review.yml  claude.yml  commitlint.yml  docker-publish.yml  docs.yml  playwright.yml  react-doctor.yml  release.yml
app/: conftest.py  main.py  memory_profiler.py  schemas.py  testing.py
app/analytics/: gateway.py  models.py  registry.py
app/cli/: main.py  roles.py  users.py
app/config/: plugins.json
app/core/: cache.py  config.py  db.py  email.py  encryption.py  google_auth.py  logger.py  oauth.py  security.py
app/hooks/: __init__.py  actions.py  catalog.py  contexts.py  filters.py  priorities.py
app/lib/: __init__.py  analytics.py  audit.py  auth.py  db.py  documents.py  exceptions.py  hooks.py  http.py  llm.py  log.py  permissions.py  plugins.py  rag.py  routes.py  settings.py
app/llm/: adapter.py  classifier.py  exceptions.py  plugin_adapter.py  prompt.py  protocols.py  providers.py  schemas.py  service.py
app/mcp/: auth_middleware.py  main.py  oauth_provider.py  oauth_validator.py  request.py  server.py  types.py
app/migrations/: env.py
app/migrations_analytics/: env.py
app/models/: __init__.py  audit.py  base.py  drive.py  email_verification.py  llm.py  oauth.py  permissions.py  plugin.py  rbac.py  user.py
app/permissions/: __init__.py  exceptions.py  models.py  service.py
app/plugins/: PLUGIN_GUIDE.md  __init__.py  adapters.py  base.py  config_base.py  exceptions.py  loader.py  manager.py  middleware.py  migrations.py  v1.py
app/rag/: agent.py  agent_tools.py  chunking.py  cleanup.py  config.py  constants.py  context_service.py  db_models.py  embeddings.py  enums.py  exceptions.py  extraction.py  formatting.py  ingestion.py  memory_profiler.py  models.py  provider.py  pydantic_models.py  store.py  structure.py  types.py  utils.py
app/rag_mcp/: db.py  main.py  schemas.py  server.py  tools.py
app/schemas/: oauth.py
app/services/: email_verification.py  plugin.py  rbac.py  whitelist.py
backend/: .env.example  README.md
backend/api/: Cargo.toml
backend/app_core/: Cargo.toml
backend/app_core/migrations/2025-10-13-090940-0000_create_plugins_table/: down.sql  up.sql
backend/app_core/migrations/2025-10-15-063000-0000_users/: down.sql  up.sql
backend/app_core/migrations/2025-10-23-123449-0000_create_plugin_configurations/: down.sql  up.sql
backend/app_core/migrations/2025-10-31-075934-0000_user_configs/: down.sql  up.sql
backend/app_core/migrations/2025-11-06-134458-0000_user_configs/: down.sql  up.sql
backend/app_core/src/: lib.rs  schema.rs  utils.rs
backend/app_core/src/db/: db_pool.rs  error.rs  mod.rs
backend/app_core/src/db/models/: mod.rs  plugin.rs  plugin_configs.rs  user_plugin_configs.rs  user_plugins.rs  users.rs
backend/app_core/src/service/: mod.rs  plugin_configs_service.rs  plugin_service.rs  user_service.rs
backend/core/: Cargo.toml  diesel.toml
backend/web-api/: Cargo.toml
backend/web-api/src/: api_response.rs  error.rs  main.rs  router.rs
backend/web-api/src/auth/: api.rs  mod.rs  routes.rs
backend/web-api/src/jwt/: jwt_service.rs  mod.rs
backend/web-api/src/middleware/: auth.rs  mod.rs
backend/web-api/src/plugins/: api.rs  mod.rs  routes.rs
commands/: __init__.py  main.py
core/: db.py
docker/initdb/: 01-create-analytics-db.sh
docs/: index.md
docs/guides/: configuration.md  frontend-plugins.md  permissions.md  plugins.md  user-management.md
docs/reference/: configuration.md  lib.md  permissions.md  plugins.md
frontend/: .gitignore  .oxfmtrc.json  Dockerfile.playwright  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page-client.tsx  page.tsx
frontend/components/: AppSidebar.test.tsx  AppSidebar.tsx  LLMConfigSelect.tsx  MobileSidebar.tsx  PluginErrorBoundary.tsx  PluginRenderer.tsx  PluginSettings.tsx  SparkthHeader.tsx  SparkthLogo.tsx  Spinner.tsx  ThemeToggle.tsx
frontend/hooks/: useMediaQuery.ts
frontend/lib/: ThemeContext.tsx  api.test.ts  api.ts  auth-context.tsx  auth-tokens.ts  chat-api.test.ts  chat-api.ts  chat.ts  drive.test.ts  drive.ts  file-upload.ts  file_upload.ts  llm-api.test.ts  llm-api.ts  llm-validation.ts  prompt.ts  rag-status.ts  sidebar-context.tsx  slack-api.ts  useRagStatusPolling.test.ts  useRagStatusPolling.ts  user-plugins.ts  utils.ts
frontend/plugins/: index.ts
frontend/tests/: README.md  auth.setup.ts  config.ts  dashboard.spec.ts  login.spec.ts  sign-up.spec.ts
mcp/: Cargo.toml  README.md
mcp/src/: error.rs  main.rs  utils.rs
mcp/src/plugin/: api.rs  error.rs  macros.rs  mod.rs  registry.rs
mcp/src/plugins/: README.md  errors.rs  mod.rs  request.rs  response.rs
mcp/src/plugins/canvas/: mod.rs
mcp/src/plugins/openedx/: client.rs  mod.rs
mcp/src/server/: mcp_server.rs
mcp/src/tools/: mod.rs
migrations/: env.py
migrations/versions/: c697de92eb38_create_user_table.py
plans/multi-attachment/: plan-1.md  plan-2.md  plan-3.md  plan-4.md  plan-5.md
py/: README.md  pyproject.toml
scripts/: dump_openapi.py  e2e-backend.sh  e2e_init_db.py  e2e_seed.py  rag_memory_test.py  seed_e2e.py
sparkth/: main.py  memory_profiler.py  schemas.py  testing.py
sparkth-plugins/: example_plugin.py  tasks_plugin.py
sparkth_mcp/: main.py  mode.py  prompt.py  request.py  server.py  types.py
src/: course_args.rs  filter_chains.rs  filter_macro.rs  main.rs  mcp_server.rs  prompts.rs
tests/: conftest.py
(+1141 files in other folders)
