[package]
name = "sparkth"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.2.1", features = [ 
    "server",
    "transport-io", 
    "transport-sse-server"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = {version="4.5.41", features = ["derive"]}
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter"
] }
tokio-util = "0.7.15"

