[package]
name = "sparkth"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.2.1", features = [
    "server",
    "transport-io", 
    "transport-sse-server",
] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.22"
thiserror = "2.0.12"
dotenvy = "0.15.7"
async-trait = "0.1.88"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter"
] }
clap = { version = "4.5.41", features = ["derive"] }
tokio-util = "0.7.15"
chrono = "0.4.41"
