[project]
name = "sparkth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.2",
    "fastapi[standard]>=0.121.2",
    "fastmcp>=2.13.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
    "sqlmodel>=0.0.27",
    "uuid6>=2025.0.1",
    "pyjwt[crypto]>=2.10.1",
    "pydantic-settings>=2.12.0",
    "pwdlib[argon2]>=0.3.0",
    "psycopg2-binary>=2.9.11",
    "typer>=0.15.0",
]

[tool.ruff]
line-length = 120
exclude = [
    "migrations",
    "*/migrations/*"
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.14.5",
    "mypy>=1.19.0",
]
