[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "sparkth"
version = "0.1.1"
description = "MCP server and API for AI-powered course generation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.2",
    "fastapi[standard]>=0.121.2",
    "fastmcp>=2.13.1",
    "pydantic>=2.12.4",
    "sqlmodel>=0.0.27",
    "uuid6>=2025.0.1",
    "pyjwt[crypto]>=2.10.1",
    "pydantic-settings>=2.12.0",
    "pwdlib[argon2]>=0.3.0",
    "psycopg2-binary>=2.9.11",
    "typer>=0.15.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "asyncpg>=0.31.0",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.22.1",
    "greenlet>=3.2.4",
]

[tool.ruff]
line-length = 120
exclude = [
    "migrations",
    "*/migrations/*"
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.14.5",
    "mypy>=1.19.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = [
    "migrations",
    ".venv",
]

[tool.ruff.lint]
ignore = ["E711", "E712"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "sqlmodel.*",
    "fastmcp.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
ignore_missing_imports = true
