[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
app_core = { path = "../backend/app_core" }
rmcp = { version = "0.8.3", features = [
    "server",
    "transport-io",
    "transport-sse-server",
] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
reqwest = {version = "0.12.22", features = ["json"]}
thiserror = "2.0.12"
async-trait = "0.1.88"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter"
] }
clap = { version = "4.5.43", features = ["derive"] }
tokio-util = "0.7.16"
chrono = "0.4.41"
schemars = "1.0.4"
url = "2.5.4"
form_urlencoded = "1.2.1"
paste = "1.0.15"
