[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.2", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
regex = "1.10.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
inquire = "0.9.1"
argon2 = { version = "0.5.3", features = ["std"] }
once_cell = "1.21.3"
