[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
axum = "0.8.6"
tokio = {version = "1.47.1", features = ["full"]}
dotenvy = "0.15.7"
thiserror = "2.0.17"
tower-http = {version =  "0.6.6", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["time"] }
serde_json = "1.0.145"
log = "0.4.28"
serde = "1.0.228"
